Add test dependencies to dependabot config

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -26,6 +26,13 @@ updates:
       # Quarkiverse extensions
       - dependency-name: "io.quarkiverse.*:*"
       - dependency-name: "org.amqphub.quarkus:quarkus-qpid-jms-bom"
+      # Test dependencies
+      - dependency-name: "com.github.tomakehurst:wiremock"
+      - dependency-name: "com.unboundid:unboundid-ldapsdk"
+      - dependency-name: "org.hamcrest:hamcrest"
+      - dependency-name: "org.hamcrest-core:hamcrest"
+      - dependency-name: "org.seleniumhq.selenium:htmlunit-driver"
+      - dependency-name: "org.zeroturnaround:zt-exec"
       # Maven plugins
       - dependency-name: "*:*-maven-plugin"
       - dependency-name: "org.apache.maven.plugins:*"
