--- a/tooling/test-list/pom.xml
+++ b/tooling/test-list/pom.xml
@@ -58,6 +58,7 @@
                                 <exclude>support/**/*</exclude>
                                 <exclude>support/**/*</exclude>
                                 <exclude>groovy-dsl/pom.xml</exclude><!-- See https://github.com/apache/camel-quarkus/issues/4894 -->
+                                <exclude>master/pom.xml</exclude>
                                 <exclude>master-openshift/pom.xml</exclude>
                                 <exclude>master-file/pom.xml</exclude>
                                 <exclude>main-command-mode/pom.xml</exclude>
