Upgrade Quarkus to 3.2.0.CR1

--- a/poms/bom/pom.xml
+++ b/poms/bom/pom.xml
@@ -1826,6 +1826,10 @@
                 <version>${camel.version}</version>
                 <exclusions>
                     <exclusion>
+                        <groupId>org.eclipse.parsson</groupId>
+                        <artifactId>jakarta.json</artifactId>
+                    </exclusion>
+                    <exclusion>
                         <groupId>org.glassfish</groupId>
                         <artifactId>jakarta.json</artifactId>
                     </exclusion>
