--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -215,6 +215,7 @@
         <module>ssh</module>
         <module>stax</module>
         <module>stringtemplate</module>
+        <module>swift</module>
         <!--<module>syndication</module> https://github.com/apache/camel-quarkus/issues/4515 -->
         <module>syslog</module>
         <module>tarfile</module>
