--- a/tooling/scripts/test-categories.yaml
+++ b/tooling/scripts/test-categories.yaml
@@ -162,6 +162,7 @@ group-10:
   - main-unknown-args-ignore
   - platform-http-proxy
   - platform-http-proxy-ssl
+  - swift
 group-11:
   - compression-grouped
   - disruptor
