Add a profile for analyzing possible dependency conflicts between Camel and Quarkus

--- a/pom.xml
+++ b/pom.xml
@@ -166,7 +166,7 @@
         <maven-utils.version>0.1.0</maven-utils.version>
 
         <!-- Maven plugin versions (keep sorted alphabetically) -->
-        <cq-plugin.version>4.1.3</cq-plugin.version>
+        <cq-plugin.version>4.3.0</cq-plugin.version>
         <cyclonedx-maven-plugin-version>2.7.9</cyclonedx-maven-plugin-version>
         <build-helper-maven-plugin.version>3.4.0</build-helper-maven-plugin.version>
         <exec-maven-plugin.version>3.1.0</exec-maven-plugin.version>
@@ -1297,6 +1297,254 @@
                    </executions>
                 </plugin>
             </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <!-- Analyze possible dependency conflicts between primary depedency projects, such as Camel and Quarkus -->
+            <!-- Invoke through ./mvnw -Pda -N -->
+            <id>da</id>
+            <build>
+                <defaultGoal>initialize</defaultGoal>
+                <plugins>
+                    <plugin>
+                        <groupId>org.l2x6.cq</groupId>
+                        <artifactId>cq-maven-plugin</artifactId>
+                        <version>${cq-plugin.version}</version>
+                        <inherited>false</inherited>
+                        <executions>
+                            <execution>
+                                <id>da</id>
+                                <goals>
+                                    <goal>da</goal>
+                                </goals>
+                                <phase>initialize</phase>
+                                <configuration>
+                                    <additionalBoms>
+                                        <additionalBom>io.quarkus:quarkus-bom:${quarkus.version}</additionalBom>
+                                    </additionalBoms>
+                                    <originExcludes>
+                                        <originExclude>io.quarkus:quarkus-bom</originExclude>
+                                    </originExcludes>
+                                    <resolutionEntryPointIncludes>
+                                        <resolutionEntryPointInclude>org.apache.camel.quarkus:*-deployment</resolutionEntryPointInclude>
+                                    </resolutionEntryPointIncludes>
+                                    <bomFile>poms/bom/src/main/generated/flattened-reduced-pom.xml</bomFile>
+                                    <primaryDependencyProjects>
+                                        <primaryDependencyProject>
+                                            <id>camel</id>
+                                            <includeGas>org.apache.camel:*</includeGas>
+                                        </primaryDependencyProject>
+                                        <primaryDependencyProject>
+                                            <id>quarkus</id>
+                                            <includeGas>io.quarkus:*</includeGas>
+                                        </primaryDependencyProject>
+                                    </primaryDependencyProjects>
+                                    <transitiveProjects>
+                                        <transitiveProject>
+                                            <id>com.fasterxml:classmate</id>
+                                            <includeGas>com.fasterxml:classmate</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>com.fasterxml:aalto-xml</id>
+                                            <includeGas>com.fasterxml:aalto-xml</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>com.google.api.grpc:*google-cloud-storage-v2</id>
+                                            <includeGas>com.google.api.grpc:*google-cloud-storage-v2</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>com.google.api.grpc:*google-cloud-bigquerystorage-v1</id>
+                                            <includeGas>com.google.api.grpc:*google-cloud-bigquerystorage-v1</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>com.google.api.grpc:*google-cloud-bigquerystorage-v1beta</id>
+                                            <includeGas>com.google.api.grpc:*google-cloud-bigquerystorage-v1beta</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>com.google.api.grpc:*google-iam-v1</id>
+                                            <includeGas>com.google.api.grpc:*google-iam-v1</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>com.google.api.grpc:*google-cloud-functions-v1</id>
+                                            <includeGas>com.google.api.grpc:*google-cloud-functions-v1</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>com.google.api.grpc:*google-cloud-pubsub-v1</id>
+                                            <includeGas>com.google.api.grpc:*google-cloud-pubsub-v1</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>com.google.api.grpc:*google-cloud-secretmanager-v1*</id>
+                                            <includeGas>com.google.api.grpc:*google-cloud-secretmanager-v1*</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>com.google.api.grpc:proto-google-common-protos</id>
+                                            <includeGas>com.google.api.grpc:proto-google-common-protos</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>com.google.guava:failureaccess</id>
+                                            <includeGas>com.google.guava:failureaccess</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>com.google.guava:guava</id>
+                                            <includeGas>com.google.guava:guava</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>com.google.guava:listenablefuture</id>
+                                            <includeGas>com.google.guava:listenablefuture</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>io.fabric8:kubernetes*</id>
+                                            <includeGas>io.fabric8:kubernetes*</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>io.fabric8:zjsonpatch</id>
+                                            <includeGas>io.fabric8:zjsonpatch</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>io.netty:netty</id>
+                                            <includeGas>io.netty:netty</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>io.netty:netty-*</id>
+                                            <includeGas>io.netty:netty-*</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>io.opentelemetry:opentelemetry*</id>
+                                            <includeGas>io.opentelemetry:opentelemetry*</includeGas>
+                                            <excludeGas>io.opentelemetry:opentelemetry-extension-annotations,io.opentelemetry:opentelemetry-api-events,io.opentelemetry:opentelemetry-api-logs,io.opentelemetry:opentelemetry-sdk-extension-autoconfigure,io.opentelemetry:opentelemetry-sdk-logs,io.opentelemetry:opentelemetry-semconv,io.opentelemetry.instrumentation:opentelemetry-instrumentation-annotations-support,io.opentelemetry.instrumentation:opentelemetry-instrumentation-api-semconv</excludeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>io.opentelemetry:opentelemetry-alpha</id>
+                                            <includeGas>io.opentelemetry:opentelemetry-api-events,io.opentelemetry:opentelemetry-api-logs,io.opentelemetry:opentelemetry-sdk-extension-autoconfigure,io.opentelemetry:opentelemetry-sdk-logs,io.opentelemetry:opentelemetry-semconv,io.opentelemetry.instrumentation:opentelemetry-instrumentation-annotations-support,io.opentelemetry.instrumentation:opentelemetry-instrumentation-api-semconv</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>io.opentelemetry:opentelemetry-extension-annotations</id>
+                                            <includeGas>io.opentelemetry:opentelemetry-extension-annotations</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>io.smallrye:smallrye-fault-tolerance</id>
+                                            <includeGas>io.smallrye:smallrye-fault-tolerance*</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>io.smallrye:smallrye-health</id>
+                                            <includeGas>io.smallrye:smallrye-health*</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>io.smallrye.reactive:mutiny*</id>
+                                            <includeGas>io.smallrye.reactive:mutiny*</includeGas>
+                                            <excludeGas>io.smallrye.reactive:mutiny-zero*</excludeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>io.smallrye.reactive:mutiny-zero*</id>
+                                            <includeGas>io.smallrye.reactive:mutiny-zero*</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>io.smallrye.reactive:smallrye-mutiny-vertx*</id>
+                                            <includeGas>io.smallrye.reactive:smallrye-mutiny-vertx*</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>io.smallrye.reactive:smallrye-reactive-converter*</id>
+                                            <includeGas>io.smallrye.reactive:smallrye-reactive-converter</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>io.smallrye.reactive:smallrye-reactive-messaging*</id>
+                                            <includeGas>io.smallrye.reactive:smallrye-reactive-messaging*</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>org.antlr:ST4</id>
+                                            <includeGas>org.antlr:ST4</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>org.antlr:antlr-runtime</id>
+                                            <includeGas>org.antlr:antlr-runtime</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>org.antlr:antlr4-runtime</id>
+                                            <includeGas>org.antlr:antlr4-runtime</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>org.apache.commons:commons-collections4</id>
+                                            <includeGas>org.apache.commons:commons-collections4</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>org.apache.commons:commons-compress</id>
+                                            <includeGas>org.apache.commons:commons-compress</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>org.apache.commons:commons-configuration2</id>
+                                            <includeGas>org.apache.commons:commons-configuration2</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>org.apache.commons:commons-csv</id>
+                                            <includeGas>org.apache.commons:commons-csv</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>org.apache.commons:commons-dbcp2</id>
+                                            <includeGas>org.apache.commons:commons-dbcp2</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>org.apache.commons:commons-exec</id>
+                                            <includeGas>org.apache.commons:commons-exec</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>org.apache.commons:commons-lang3</id>
+                                            <includeGas>org.apache.commons:commons-lang3</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>org.apache.commons:commons-math3</id>
+                                            <includeGas>org.apache.commons:commons-math3</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>org.apache.commons:commons-pool2</id>
+                                            <includeGas>org.apache.commons:commons-pool2</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>org.apache.commons:commons-text</id>
+                                            <includeGas>org.apache.commons:commons-text</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>org.apache.httpcomponents:httpasyncclient*</id>
+                                            <includeGas>org.apache.httpcomponents:httpasyncclient*</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>org.apache.httpcomponents:httpclient*</id>
+                                            <includeGas>org.apache.httpcomponents:httpclient*,org.apache.httpcomponents:httpmime</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>org.apache.httpcomponents:httpcore*</id>
+                                            <includeGas>org.apache.httpcomponents:httpcore*</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>org.bouncycastle:*-jdk18on</id>
+                                            <includeGas>org.bouncycastle:*-jdk18on</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>org.bouncycastle:*-jdk15on</id>
+                                            <includeGas>org.bouncycastle:*-jdk15on</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>org.jboss.logging:commons-logging-jboss-logging</id>
+                                            <includeGas>org.jboss.logging:commons-logging-jboss-logging</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>org.jboss.logging:jboss-logging</id>
+                                            <includeGas>org.jboss.logging:jboss-logging</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>org.jboss.logging:jboss-logging-annotations</id>
+                                            <includeGas>org.jboss.logging:jboss-logging-annotations</includeGas>
+                                        </transitiveProject>
+                                        <transitiveProject>
+                                            <id>org.mongodb:mongodb-crypt</id>
+                                            <includeGas>org.mongodb:mongodb-crypt</includeGas>
+                                        </transitiveProject>
+                                    </transitiveProjects>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
             </build>
         </profile>
     </profiles>
