--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -105,7 +105,7 @@
         <module>groovy</module>
         <module>groovy-dsl</module>
         <module>grpc</module>
-        <!--<module>hazelcast</module> https://github.com/apache/camel-quarkus/issues/4498 -->
+        <module>hazelcast</module>
         <module>headersmap</module>
         <module>hl7</module>
         <module>http</module>
