--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -25,6 +25,8 @@ updates:
     allow:
       # Quarkiverse extensions
       - dependency-name: "io.quarkiverse.*:*"
+      # Other third party extensions
+      - dependency-name: "com.hazelcast:quarkus-hazelcast-client-bom"
       - dependency-name: "org.amqphub.quarkus:quarkus-qpid-jms-bom"
       # Test dependencies
       - dependency-name: "com.github.tomakehurst:wiremock"
